Prepare Phase 7 tester release